2025-05-06  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* pdfutils.ch: Rename bool variable to booltemp, for C23.
	https://github.com/texjporg/tex-jp-build/issues/178

2025-04-26  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* eupver.test, euptex-{ctrlsym,widow}.test,
	tests/control-symbol.tex, tests/ctrlsym.tex,
	tests/ctrlsym-{e,s}.log, tests/jctrlsym-{e,u}.log,
	tests/eup-jctrlsyma-{e,u}.typ,
	tests/eup-jchwidow{,-{e,s}}.log, am/euptex.am:
	Clean up tests to prepare to remove ptexdir.
	https://github.com/texjporg/tex-jp-build/issues/32
	* wcfname0.test: Add tests for recorder filename.
	https://github.com/texjporg/tex-jp-build/issues/45

2025-04-05  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* e{,u}ptrip/eptrip.tex, tests/eup-jchwidow.log,
	tests/printkanji.tex, tests/pknj-{e,s,u}.log:
	Update tests.

2025-03-07  Karl Berry  <karl@tug.org>

	* TL'25 release.

2025-02-17  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* eptex.ech: Adjust protected_token.
	Thanks to Kazuki Maeda and Yukimasa Morimi.
	https://github.com/texjporg/tex-jp-build/issues/176

2025-02-09  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* suppresserrors.ch: Format \ignoreprimitiveerror printing
	as in pdfTeX and XeTeX.
	* kinsoku_table.log, kinsoku_table.tex: No error after
	increasing inhibit_xsp/kinsoku tables 256 -> 1024.

2025-02-02  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* euptex-{ofm,prntknj}.test, tests/eup-ofm.{tex,log},
	tests/pknj-{e,s,u}.log: Update tests.

2025-02-02  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* suppresserrors.ch: Add \ignoreprimitiveerror
	as in pdfTeX and XeTeX.
	* eptex_version.h, eptex.ech:
	Bump version to 250202.

2025-01-27  Karl Berry  <karl@freefriends.org>

	* am/euptex.am (euptex-pool.c): exit 1 if makecpool failed.

2025-01-02  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* upkcat.test: Update tests.
	* euptex-widow.test, tests/eup-jchwidow.log,
	am/euptex.am: Add new tests for widow penalty originally
	written by Kitagawa-san.