@@ -209,15 +209,18 @@ l.163 \expandafter\show\csname ^^c5^^bf\endcsname
 l.164 \expandafter\show\csname 顛\endcsname
                                            
 
-\^^e3^^81^^82\あ 
+\^^e3^^81^^82\あ
+SNOW SNOW 雪
+snow snow 雪
+
 ifx:FALSE
 [50623]
-Memory usage before: 1790&5528; after: 130&5093; still untouched: 4992436
+Memory usage before: 1790&5528; after: 130&5093; still untouched: 4992418
  ) 
 Here is how much of TeX's memory you used:
  27 strings out of 497XXX
  152 string characters out of 6215XXX
- 7564 words of memory out of 5000000
+ 7582 words of memory out of 5000000
  10XX multiletter control sequences out of 15000+600000
  3271 words of font info for 2 fonts, out of 8000000 for 9000
  0 hyphenation exceptions out of 8191
