@@ -173,6 +173,9 @@ MEANING \meaning\ſ.\meaning\顛.%
 
 \message{\string\^^e3^^81^^82 \string\あ}
 
+\uppercase{\immediate\write16{snow SNOW 雪}}
+\lowercase{\immediate\write16{snow SNOW 雪}}
+
 % check whether ^^^^0000 works or not
 \catcode`\@=11
 \def\@empty{}
