@@ -1,3 +1,12 @@
+2025-06-22  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* uptex-m.ch, kanji.[ch]:
+	Fix bug on \uppercase, \lowercase for CJK character.
+	Thanks to TAKENO S. and Y. Morimi.
+	https://github.com/texjporg/tex-jp-build/issues/179
+	* tests/printkanji.tex, tests/pknj-[esu].log:
+	Update tests.
+
 2025-04-26  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* {nissya,sample,skipjfmp,updvitype,upver,yokotate}.test,
